--- a/debug.env
+++ b/debug.env
@@ -10,7 +10,7 @@ context.workspaceId=255
 modal.state.slyProjectId=1859
 
 modal.state.catalogPath="/reference_items/1120-aguas_catalogo-1120-1121-aguas - Sheet1.csv"
-modal.state.users_batches_path="/reference_items/user2batch_agua.json"
+modal.state.user2batchesPath="/reference_items/user2batch_agua.json"
 modal.state.tagName="UPC"
 modal.state.columnName="UPC CODE"
 modal.state.targetClassName="Product"
