--- a/debug.env
+++ b/debug.env
@@ -6,7 +6,7 @@ TASK_ID=2325
 
 context.teamId=218
 context.workspaceId=255
-#context.userId=1
+context.userId=1
 modal.state.slyProjectId=1859
 
 modal.state.catalogPath="/reference_items/1120-aguas_catalogo-1120-1121-aguas - Sheet1.csv"
@@ -14,7 +14,7 @@ modal.state.user2batchesPath="/reference_items/user2batch_agua.json"
 modal.state.tagName="UPC"
 modal.state.columnName="UPC CODE"
 modal.state.targetClassName="Product"
-modal.state.multiselectClassName="Multiselect"
+modal.state.multiselectClassName="multiselect"
 
 SERVER_ADDRESS="put your value here"
 API_TOKEN="put your value here"
