--- a/config.json
+++ b/config.json
@@ -1,36 +1,27 @@
 {
-  "name": "Mark Reference Objects for Retail",
+  "name": "Retail Tagging",
   "type": "app",
   "categories": [
     "retail",
-    "reference items"
+    "tagging"
   ],
-  "description": "Prepare examples for products from catalog",
+  "description": "Supports multi-user mode",
   "docker_image": "supervisely/base-py-sdk:6.1.46",
   "main_script": "src/main.py",
   "gui_template": "src/gui.html",
   "modal_template": "src/modal.html",
   "modal_template_state": {
     "catalogPath": "",
-    "fieldName": "",
-    "columnName": "",
+    "user2batchesPath": "",
+    "tagName": "",
     "targetClassName": "",
-    "referenceTagName": "",
-    "multiselectClassName": ""
-  },
-  "debug_modal_template_state": {
-    "catalogPath": "/retail/snacks_catalog.csv",
-    "fieldName": " UPC",
-    "columnName": "UPC CODE",
-    "targetClassName": "",
-    "referenceTagName": "",
     "multiselectClassName": ""
   },
   "task_location": "workspace_tasks",
   "isolate": true,
   "headless": true,
   "integrated_into": ["image_annotation_tool"],
-  "icon": "https://img.icons8.com/color/96/000000/ingredients.png",
+  "icon": "https://img.icons8.com/color/96/000000/refresh-barcode.png",
   "icon_background": "#FFFFFF",
   "context_menu": {
     "target": ["images_project"]
