--- a/config.json
+++ b/config.json
@@ -1,33 +1,33 @@
 {
-  "name": "Retail Tagging",
-  "type": "app",
-  "categories": [
-    "images",
-    "labeling"
-  ],
-  "description": "Supports multi-user mode",
-  "docker_image": "supervisely/base-py-sdk:6.35.0",
-  "main_script": "src/main.py",
-  "gui_template": "src/gui.html",
-  "modal_template": "src/modal.html",
-  "modal_template_state": {
-    "catalogPath": "",
-    "user2batchesPath": "",
-    "tagName": "",
-    "targetClassName": "",
-    "multiselectClassName": ""
-  },
-  "task_location": "workspace_tasks",
-  "isolate": true,
-  "headless": true,
-  "integrated_into": [
-    "image_annotation_tool"
-  ],
-  "icon": "https://img.icons8.com/color/96/000000/refresh-barcode.png",
-  "icon_background": "#FFFFFF",
-  "context_menu": {
-    "target": [
-      "images_project"
-    ]
-  }
+    "name": "Retail Tagging",
+    "type": "app",
+    "categories": [
+        "images",
+        "labeling"
+    ],
+    "description": "Supports multi-user mode",
+    "docker_image": "supervisely/labeling:0.0.1",
+    "main_script": "src/main.py",
+    "gui_template": "src/gui.html",
+    "modal_template": "src/modal.html",
+    "modal_template_state": {
+        "catalogPath": "",
+        "user2batchesPath": "",
+        "tagName": "",
+        "targetClassName": "",
+        "multiselectClassName": ""
+    },
+    "task_location": "workspace_tasks",
+    "isolate": true,
+    "headless": true,
+    "integrated_into": [
+        "image_annotation_tool"
+    ],
+    "icon": "https://img.icons8.com/color/96/000000/refresh-barcode.png",
+    "icon_background": "#FFFFFF",
+    "context_menu": {
+        "target": [
+            "images_project"
+        ]
+    }
 }
